--- a/jsbundleconfig.json
+++ b/jsbundleconfig.json
@@ -5,7 +5,16 @@
         "common": [{
             "outputFileName": "site.js",
             "inputFiles": [
-                "Layout/_Layout.js"
+                "Layout/_Layout.js",
+                "Utilities/_Utilities.js",
+                "Components/_Components.js",
+                "Utilities/ThirdParty/Knockout/knockout.3.5.0-min.js",
+                "Components/Navigation/_Navigation.js",
+                "Components/Intro/_Intro.js",
+                "Components/Card/Portfolio/_PortfolioCards.js",
+                "Components/Footer/_Footer.js",
+                "Pages/Items/_Harmony.js",
+                "Pages/Items/_Pinewood.js"
             ]
         }]
     }
