--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gulp-uglify": "^3.0.2",
-    "merge-stream": "^2.0.0"
+    "merge-stream": "^2.0.0",
+    "requirejs": "^2.3.6"
   }
 }
