--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "gulp-uglify": "^3.0.2",
     "merge-stream": "^2.0.0",
-    "requirejs": "^2.3.6"
+    "requirejs": "^2.3.6",
+    "text": "github:requirejs/text"
   }
 }
