--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "kierannoble.dev",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Personal portfolio website for Kieran Noble (@AyloKieran)",
   "main": "gulpfule.js",
   "scripts": {
     "build": "gulp build",
-    "watcj": "gulp watch"
+    "watch": "gulp watch"
   },
   "author": "howdy@kierannoble.dev",
   "license": "ISC",
@@ -13,10 +13,8 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.52.1"
-  },
-  "dependencies": {
     "gulp-uglify": "^3.0.2",
+    "sass": "^1.52.1",
     "merge-stream": "^2.0.0",
     "requirejs": "^2.3.6",
     "text": "github:requirejs/text"
