--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "vite-project",
+  "name": "kierannoble.dev",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "author": {
+    "name": "Kieran Noble",
+    "email": "howdy@kierannoble.dev",
+    "url": "https://kierannoble.dev/"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,12 +15,14 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "sass": "^1.58.0",
     "vite": "^4.1.0"
   }
 }
