--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "kierannoble.dev",
   "private": true,
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "author": {
     "name": "Kieran Noble",
     "email": "howdy@kierannoble.dev",
     "url": "https://kierannoble.dev/"
   },
+  "homepage": "https://kierannoble.dev/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node server/server.js"
+    "serve": "node server/server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "express": "^4.18.2",
+    "gh-pages": "^5.0.0",
     "sass": "^1.58.0",
     "vite": "^4.1.0"
   }
