--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,19 +5,23 @@ on:
       - v2.0-react
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     concurrency: ci-${{ github.ref }}
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - name: Setup Node 🛠️
+        uses: actions/setup-node@v1
         with:
           node-version: "19.1.0"
 
-      - name: Install and Build 🔧
+      - name: Install Dependencies 🔧
         run: |
           npm install
+
+      - name: Build 🏗️
+        run: |
           npm run build
 
       - name: Deploy 🚀
