--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,25 +7,21 @@ jobs:
   build-and-deploy:
     runs-on: windows-latest
     concurrency: ci-${{ github.ref }}
+    permissions:
+      pages: write
+      id-token: write
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
-
       - name: Setup Node 🛠️
         uses: actions/setup-node@v1
         with:
           node-version: "19.1.0"
-
       - name: Install Dependencies 🔧
         run: |
           npm install
-
       - name: Build 🏗️
         run: |
           npm run build
-
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages
-          folder: dist
+        uses: actions/deploy-pages@v1
