--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,9 @@ on:
       - v2.0-react
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     concurrency: ci-${{ github.ref }}
-    permissions:
-      pages: write
-      id-token: write
+    permissions: write-all
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
