--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
       - v2.0-react
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     concurrency: ci-${{ github.ref }}
     steps:
       - name: Checkout 🛎️
