--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kierannoble.dev",
   "private": true,
-  "version": "2.1.1",
+  "version": "2.1.2",
   "type": "module",
   "author": {
     "name": "Kieran Noble",
@@ -10,7 +10,7 @@
   },
   "homepage": "https://kierannoble.dev/",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
