--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kierannoble.dev",
   "private": true,
-  "version": "2.2.0",
+  "version": "2.2.1",
   "type": "module",
   "author": {
     "name": "Kieran Noble",
@@ -15,6 +15,9 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
